<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView android:id="@+id/upload"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/entry"
        android:layout_below="@id/upload"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/voice_diary_home_patient_domain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/button_patient_domain" />
    
    <Button
        android:id="@+id/voice_diary_home_doctor_domain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/voice_diary_home_patient_domain"
        android:layout_marginTop="10dp"
        android:text="@string/button_doctor_domain" />

    <Button
        android:id="@+id/voice_diary_home_exit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/voice_diary_home_doctor_domain"
        android:layout_marginTop="10dp"
        android:text="@string/exit" />

</RelativeLayout>