<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EduAddUserActivity" >

    <TextView
        android:id="@+id/eduroam_add_user_Id_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/textField_userID" />

    <EditText
        android:id="@+id/eduroam_add_user_ID"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/eduroam_add_user_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/textField_email" />

    <EditText
        android:id="@+id/eduroam_add_user_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/eduroam_add_user_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/textField_password" />

    <EditText
        android:id="@+id/eduroam_add_user_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPassword" />

</LinearLayout>