<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RadioButton
        android:id="@+id/timerOnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/onOff" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timerOnOff"
        android:layout_below="@+id/timerOnOff"
        android:layout_marginTop="5dp" >

        <Spinner
            android:id="@+id/startHours"
            android:layout_width="66dp"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text=":"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/startMinutes"
            android:layout_width="58dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timerOnOff"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="20dp" >

        <Spinner
            android:id="@+id/stopHours"
            android:layout_width="66dp"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text=":"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/stopMinutes"
            android:layout_width="58dp"
            android:layout_height="50dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/stopTimerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout2"
        android:layout_alignLeft="@+id/startTimerText"
        android:layout_marginBottom="15dp"
        android:text="@string/stop"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/startTimerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout1"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginBottom="14dp"
        android:text="@string/start"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/repeatTimerText"
        android:layout_below="@+id/repeatIntervals1"
        android:layout_marginTop="30dp"
        android:text="                                     "
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/repeatIntervals"
        android:layout_width="66dp"
        android:layout_height="50dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="160dp" />

    <TextView
        android:id="@+id/repeatTimerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/linearLayout2"
        android:text="@string/repeat"
        android:textSize="15sp" />

</RelativeLayout>